--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -78,3 +78,14 @@ ion-row.row_ico_icons.md.hydrated {
   text-align: center;
 }
 
+ion-col.md.hydrated {
+  font-family: Gotham;
+  padding: 20px;
+  line-height: 25px;
+  border-top: 1px solid lightgray;
+}
+
+.MenuIcn {
+  font-size: 27px;
+  color: #006aff;
+}
