--- a/src/app/walk-through/walk-through.page.html
+++ b/src/app/walk-through/walk-through.page.html
@@ -44,7 +44,7 @@
    <img src="../../assets/fb_icon.png" class="icon_" (click)="socialFb()" alt="social_media_icon">
     <img src="../../assets/google_icon.png" class="icon_" (click)="socialGoogle()"  alt="social_media_icon">
  
-    <img src="../../assets/linkedin_icon.png" class="icon_" alt="social_media_icon">
+    <img src="../../assets/linkedin_icon.png" class="icon_" alt="social_media_icon" (click)="linkk()">
  
     <img src="../../assets/twitter_icon.png" class="icon_" alt="social_media_icon">
  
