--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,33 +1,88 @@
 
 
+<ion-header>
+  <ion-toolbar>
+     
+  
+    <ion-title>
+      <p>Dashboard</p>
+  </ion-title>
+
+ 
+
+  <ion-buttons slot="end">
+
+    <button mat-button [matMenuTriggerFor]="menu">
+        <ion-icon ios="ios-apps" md="md-apps"  class="MenuIcn"></ion-icon>
+
+    </button>
+    <mat-menu #menu="matMenu">
+      <button mat-menu-item>
+        <ion-icon name="person"></ion-icon>
+      </button>
+  
+      <button mat-menu-item (click)="logout()">
+        <ion-icon name="log-out"></ion-icon>
+      </button>
+
+    </mat-menu>
+  </ion-buttons>
+
+
+  </ion-toolbar>
+</ion-header>
+
 <ion-content>
+
+    <!-- <particles [params]="myParams" [style]="myStyle" [width]="width" [height]="height"></particles> -->
+    <div id="particles-js"></div>
+
   <ion-card class="welcome-card">
     <img src="/assets/shapes.svg" alt="" />
     <ion-card-header>
       <ion-card-subtitle>Get Started</ion-card-subtitle>
-      <ion-card-title>Welcome to Ahrvo DEXX Kyc App</ion-card-title>
+      <ion-card-title>Welcome to Ubuntu Kyc!</ion-card-title>
     </ion-card-header>
     <ion-card-content>
       <p>   We Provide Technology Consulting through Process Design & Implementation, Workflow Optimization, & Automation.</p>
     </ion-card-content>
   </ion-card>
 
+    <ion-list lines="none">
+  
+    <ion-item>
+      <ion-icon slot="start" color="medium" name="book"></ion-icon>
+      <ion-label> Account</ion-label>
+    </ion-item>
+    <ion-item (click)="StartKyc_()">
+      <ion-icon slot="start" color="medium" name="build"></ion-icon>
+      <ion-label>  Kyc Application</ion-label>
+    </ion-item>
+    <ion-item >
+      <ion-icon slot="start" color="medium" name="build"></ion-icon>
+      <ion-label>  Buy Token</ion-label>
+    </ion-item>
 
-  <ion-row  class="startRow" (click)="StartKyc_()">
-    <ion-col  >
-        <p class="sub_title">
-         Start with your Kyc
-          </p>
-      <!-- <img  src="../../assets/start.png" alt="start_application" class="start-png"> -->
-    </ion-col>
-</ion-row>
+    <ion-item (click)="logout()">
+      <ion-icon slot="start" color="medium" name="log-out" class="logout"></ion-icon>
+      <ion-label>Logout</ion-label>
+    </ion-item>
+ 
+  </ion-list> 
+
+
 
 <ion-row  class="Count_row" >
   <ion-col  >
-    <p class="timer_text">Ea ius adhuc dolore minimum. Rebum dignissim</p>
-    <p class="timer_text">ਨਹੀ ! ਬਜਾਇ ਕਿ ਏਹੁ ਵਰਤਮਾਨ ਪੰਜਾਬੀ ਦੇ ਸ਼ਬਦਾਂ ਦੀ ਹੇਰ-ਫ਼ੇਰ ਹੈ </p>
-    
+    <p class="timer_text">Thank you for showing your support of the Ubuntu Project and your interest in the Ubuntu Token! You can make contributions to receive RVO coins in the 'Buy Coin' section. The Pre ICO Sale begins in 
+      
+    </p>
     <p id="demo" class="countdown_timer"></p>
+    
+    <p class="Inn">Please complete the KYC Process ASAP to avoid any delays. Make sure to include a sel}e (shoulders and above with your head centered in the image) with your identi}cation clearly showing as well as clear images of your identi}cation (front and back, except for Passports) so that the KYC Process can be completed. Please check the status of your KYC in order to con}rm that it has been veri}ed. If you have any question, please contact our support team at info@leruths.io with the subject line 'Ubuntu: ICO Support'.</p>
+    <p class="timer_text"></p>
+    
+   
   </ion-col>
 </ion-row>
 
@@ -37,66 +92,20 @@
     </ion-col>
 </ion-row>
 
+<ion-row  class="ImgBanner">
+    <ion-col  >
+      <img  src="../../assets/tokenInfo.png" alt="token-info" class="system-png">
+    </ion-col>
+</ion-row>
 
 
 
 
 
-  <!-- <ion-list lines="none">
-    <ion-list-header>
-      <ion-label>Resources</ion-label>
-    </ion-list-header>
-    <ion-item href="https://ionicframework.com/docs/">
-      <ion-icon slot="start" color="medium" name="book"></ion-icon>
-      <ion-label> Documentation</ion-label>
-    </ion-item>
-    <ion-item href="https://ionicframework.com/docs/building/scaffolding">
-      <ion-icon slot="start" color="medium" name="build"></ion-icon>
-      <ion-label>Scaffold Out Your App</ion-label>
-    </ion-item>
-    <ion-item href="https://ionicframework.com/docs/layout/structure">
-      <ion-icon slot="start" color="medium" name="grid"></ion-icon>
-      <ion-label>Your App Layout</ion-label>
-    </ion-item>
-    <ion-item href="https://ionicframework.com/docs/theming/basics">
-      <ion-icon slot="start" color="medium" name="color-fill"></ion-icon>
-      <ion-label>Theme Your App</ion-label>
-    </ion-item>
- 
-  </ion-list> -->
-
-    <ion-grid>
-      <ion-row class="row_ico_icons">
-        <ion-col col-lg-3 col-sm-6 col-6>
-          <div class="rating-item-ahrvo mb-3">
-            <a href="https://icomarks.com/ico/ahrvodeex" target="_blank" rel="nofollow" title="AhrvoDEEX ICO"><img border="0" src="https://icomarks.com/widget/a/ahrvodeex/square.svg" class="img_ico"   alt="AhrvoDEEX ICO Rating"></a>
-        </div>
-        </ion-col>
-        <ion-col col-lg-3 col-sm-6 col-6>
-          <div class="rating-item-ahrvo">
-            <a href="https://icobench.com/ico/ahrvodeex" target="_blank" rel="nofollow" title="AhrvoDEEX on ICObench"><img border="0" src="https://icobench.com/rated/ahrvodeex?shape=square&amp;size=m"  alt="AhrvoDEEX ICO rating" class="img_ico" ></a>
-        </div>
-        </ion-col>
-        <ion-col col-lg-3 col-sm-6 col-6>
-          <div class="rating-item-ahrvo">
-            <a href="https://www.trackico.io/ico/ahrvodeex/" target="_blank" title="AhrvoDEEX on TrackICO">
-                <img border="0" src="https://www.trackico.io/widget/square/ahrvodeex/205.png" class="img_ico" alt="AhrvoDEEX TrackICO rating">
-            </a>
-        </div>
-        </ion-col>
-        <ion-col col-lg-3 col-sm-6 col-6>
-          <div class="rating-item-ahrvo">
-            <a href="https://icotop.io/project/ahrvodeex" target="_blank"><img src="../../assets/ico.png" alt="" class="img_ico" ></a>
-        </div>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
-
-
- 
 
 
 
+    
 
 
   <ion-row>
@@ -184,30 +193,28 @@
           <img (click)="LinkedIn()" src="../../assets/linkedin_icon.png" class="icon_" alt="social_media_icon">
           <img (click)="Twitter()" src="../../assets/twitter_icon.png" class="icon_" alt="social_media_icon">
           <img (click)="Instagram()" src="../../assets/insta_icon.png" class="icon_" alt="social_media_icon">
-
+          <img (click)="Reddit()" src="../../assets/reddit_icon.png" class="icon_" alt="social_media_icon">
+          <img (click)="Telegram()" src="../../assets/telegram_icon.png" class="icon_" alt="social_media_icon">
+          <img (click)="Medium()" src="../../assets/medium_icon.png" class="icon_" alt="social_media_icon">
+       
         </div>
       </div>
     </ion-col>
 
     <ion-col>
 
-      <p class="About">Meet</p>
+      <p class="About">Meet Us</p>
       <div class="bg">
-        <img (click)="Zoom()" src="../../assets/zoom_icon.png" class="icon_" alt="social_media_icon">
+          <img (click)="Zoom()" src="../../assets/zoom_icon.png" class="icon_" alt="social_media_icon">
         <img (click)="Calendly()" src="../../assets/calendy_icon.png" class="icon_" alt="social_media_icon">
-        <img (click)="Reddit()" src="../../assets/reddit_icon.png" class="icon_" alt="social_media_icon">
-        <img (click)="Telegram()" src="../../assets/telegram_icon.png" class="icon_" alt="social_media_icon">
-        <img (click)="Medium()" src="../../assets/medium_icon.png" class="icon_" alt="social_media_icon">
-      </div>
+     
+     </div>
     </ion-col>
 
   </ion-row>
 
 
-  <ion-item (click)="logout()">
-      <ion-icon slot="start" color="medium" name="log-out" class="logout"></ion-icon>
-      <ion-label>Logout</ion-label>
-    </ion-item>
+
 
 
 
