--- a/src/app/walk-through/walk-through.page.html
+++ b/src/app/walk-through/walk-through.page.html
@@ -38,7 +38,7 @@
 
 
 
-<ion-footer>
+<!-- <ion-footer>
   <ion-toolbar class="footer">
  
    <img src="../../assets/fb_icon.png" class="icon_" (click)="socialFb()" alt="social_media_icon">
@@ -49,5 +49,5 @@
     <img src="../../assets/twitter_icon.png" class="icon_" alt="social_media_icon">
  
   </ion-toolbar>
-</ion-footer>
+</ion-footer> -->
 
